logs/etipsservice.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/ETipsService-1.0.7.egg-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/service'...
Compiling './lib/python3.5/site-packages/service/subsystem.py'...
***   File "./lib/python3.5/site-packages/service/subsystem.py", line 183
    print r.content.decode(_.get_charset(r.content))
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Compiling './lib/python3.5/site-packages/test/test_lifeservice.py'...
***   File "./lib/python3.5/site-packages/test/test_lifeservice.py", line 8
    print service.get_electricity_info(3, 706)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/test_subsystem.py'...
***   File "./lib/python3.5/site-packages/test/test_subsystem.py", line 10
    print "****************Login success!**************"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/test/test_wyulibrary.py'...
***   File "./lib/python3.5/site-packages/test/test_wyulibrary.py", line 8
    print _.to_json_string(lib.search_book("程序设计",1))
          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/test_wyunews.py'...
***   File "./lib/python3.5/site-packages/test/test_wyunews.py", line 11
    print wyunews.get_news_content('http://www.wyu.cn/news/news_xnxw/201531811505485186.htm')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
